--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "lint-staged": "^10.5.4"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-balloon-block": "^28.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "request": "^2.88.2"
   }
 }
