--- a/package.json
+++ b/package.json
@@ -22,17 +22,31 @@
   },
   "homepage": "https://github.com/Lidemy/mentor-program-5th#readme",
   "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
     "@lidemy/eslint-config-lidemy": "^1.0.0",
-    "eslint": "^7.23.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
-    "request": "^2.88.2"
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.0",
+    "path": "^0.12.7",
+    "request": "^2.88.2",
+    "sass": "^1.38.0",
+    "sequelize": "^6.6.5"
   }
 }
